--- a/FirstBranch.html
+++ b/FirstBranch.html
@@ -7,8 +7,9 @@
 </head>
 <body>
   <h1>Welcome to Health Declaration Forum</h1>
-  <p><h2><a href="http://192.168.1.10:5501/SecondBranch.html">"Click here to visit our health-check forum and tell us how you’re doing or how someone you know is feeling"</a></h2></p>
-   <p><h2><a href="http://192.168.1.10:5502/ThirdBranch.html">"Click her if it is urgent and needs immediate attention"</a></h2></p>
+  <p><h2><a href="https://yetiisinthemountain-eng.github.io/thirdonewebsite/ThirdBranch">"Click here to visit our health-check forum and tell us how you’re doing or how someone you know is feeling"</a></h2></p>
+   <p><h2><a href="https://yetiisinthemountain-eng.github.io/secondonewebsite/SecondBranch">"Click her if it is urgent and needs immediate attention"</a></h2></p>
 </body>
 </html>
     
+
